# bpp-standalone

./: .clang-format  .gitignore  CMakeLists.txt
include/: BinPackingView.h  BinPackingViewMgr.h  BoxSet.h  MathUtils.h  boxentity.h  bppinterface.h  mainwindow.h  mainwindow.ui  objentity.h  scenerenderer3d.h
include/Model/: BoxSet.h  Objectives.h
include/View/: BinPackingView.h  BoxEntity.h  DashboardView.h  DashboardView.ui  DistributionChart.h  DistributionChart.ui  DistributionView.h  ObjectiveChart.h  ObjectiveChart.ui  PlaneEntity.h
include/ViewMgr/: BinPackingViewMgr.h  DistributionChartViewMgr.h  DistributionViewMgr.h  ObjectiveChartViewMgr.h
include/opt/: ParamEstimator.h  ParticleFilter.h  defs.h  pdflib.hpp  rnglib.hpp
lib/: CMakeLists.txt
lib/box_factory/: CMakeLists.txt
lib/box_factory/src/: BoxJsonParser.cpp  BoxJsonParser.h  CMakeLists.txt
lib/box_factory/test/: BoxJsonParserTest.cpp  CMakeLists.txt  resources.qrc
lib/box_factory/test/resources/data/: boxes.json
lib/bpa/: CMakeLists.txt
lib/bpa/include/: Bin.h  Box.h  BoxJsonParser.h  BulletPhysics.h  FittingPoint.h  HoldingPlatform.h  KineoPhysics.h  Parameters.h  ParamsTypes.h  PhysicsBullet.h  PhysicsEngine.h  SimulatedBox.h  bpp_functions.h  pp_functions.h
lib/bpa/src/: Bin.cpp  Bin.h  Box.cpp  Box.h  BoxJsonParser.cpp  BulletPhysics.cpp  CMakeLists.txt  FittingPoint.cpp  FittingPoint.h  HoldingPlatform.cpp  KineoPhysics.cpp  MixedScore.cpp  MixedScore.h  Parameters.cpp  Parameters.h  PhysicsBullet.cpp  PhysicsBullet.h  PhysicsEngine.cpp  Point.cpp  Point.h  bpp_functions.cpp  pp_functions.cpp  pp_functions.h
lib/bpa/test/: BoxJsonParserTest.cpp  BulletPhysicsTest.cpp  CMakeLists.txt  CMakeLists.txt.in
lib/bpa/test/resources/: boxes.qrc
lib/google_test/: CMakeLists.txt
lib/physics_engine/: CMakeLists.txt
lib/physics_engine/test/: CMakeLists.txt
src/: BinPackingView.cpp  BinPackingViewMgr.cpp  BoxSet.cpp  CMakeLists.txt  MathUtils.cpp  boxentity.cpp  bppinterface.cpp  bppinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objentity.cpp  scenerenderer3d.cpp  scenerenderer3d.h  testobj.cpp
src/Model/: BoxSet.cpp  Objectives.cpp
src/View/: BinPackingView.cpp  BoxEntity.cpp  DashboardView.cpp  DistributionChart.cpp  DistributionView.cpp  ObjEntity.cpp  ObjectiveChart.cpp  PlaneEntity.cpp
src/ViewMgr/: BinPackingViewMgr.cpp  DistributionChartViewMgr.cpp  DistributionViewMgr.cpp  ObjectiveChartViewMgr.cpp
src/opt/: ParamEstimator.cpp  ParticleFilter.cpp  pdflib.cpp  rnglib.cpp
src/resources/data/: boxes.json
